tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_doctor_report.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 716
expression: rendered
---
Upload logs?

The following files will be sent:
  • ody-logs.log
  • ody-doctor-report.json
  • rollout.jsonl
  • auto-review-rollout.jsonl
